# cite-guard

./: .gitignore  CITATION.cff  CLAUDE.md  GOAL.md  LICENSE  README.md  RELEASING.md  pyproject.toml  server.json
.github/workflows/: ci.yml  publish-mcp.yml  release.yaml
docs/: contamination-study.md
docs/study/: leiden-2020.json  leiden-2020.md  maastricht-2020.json  maastricht-2020.md
evals/: harness.py  metrics.py  run.py
evals/fixtures/: ATTRIBUTION.md  hijacked_gold.csv  rw_gold.csv
evals/fixtures/openalex/: 10_1038_s41586_021_03819_2.json  10_1073_pnas_1517384113.json  10_1103_physrevlett_116_061102.json  10_1126_science_1259855.json  10_1145_3292500_3330701.json  10_2807_1560_7917_es_2020_25_3_2000045.json  10_9999_hijacked_venue_paper.json  10_9999_unverified_oa_only.json
evals/gold/: gold.jsonl
src/citeguard/: __init__.py  _http.py  checker.py  crossref.py  mcp_server.py  openalex.py  resources.py  retractionwatch.py  scan.py  status.py  timing.py  watch.py  web.py
tests/: conftest.py  test_checker.py  test_crossref.py  test_evals_gate.py  test_live_network.py  test_mcp_server.py  test_openalex.py  test_retractionwatch.py  test_scan.py  test_status.py  test_timing.py  test_watch.py  test_web.py
tests/fixtures/: hijacked_mini.csv  refs_mini.bib  rw_mini.csv
