[project]
name = "citeguard"
version = "0.1.0"
description = "Free, open, OpenAlex-native watchdog for retracted and problematic citations"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "httpx>=0.27",
    "bibtexparser>=1.4",
    "mcp>=1.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/citeguard"]

[tool.pytest.ini_options]
addopts = "-m 'not network'"
markers = ["network: tests that hit live APIs (excluded by default)"]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
packages = ["citeguard"]

[[tool.mypy.overrides]]
module = "bibtexparser.*"
ignore_missing_imports = true
