[project]
name = "retractguard"
version = "0.1.1"
description = "Free, open, OpenAlex-native watchdog for retracted and problematic citations"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Shubhankar", email = "reach2shubhankar@gmail.com" }]
keywords = [
    "retraction",
    "citation-integrity",
    "openalex",
    "retraction-watch",
    "crossref",
    "research-integrity",
    "mcp",
    "bibliometrics",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing :: Indexing",
]
dependencies = [
    "httpx>=0.27",
    "bibtexparser>=1.4",
    "mcp>=1.2",
]

[project.urls]
Homepage = "https://github.com/lonexreb/cite-guard"
Repository = "https://github.com/lonexreb/cite-guard"
Issues = "https://github.com/lonexreb/cite-guard/issues"

[project.scripts]
retractguard-mcp = "citeguard.mcp_server:main"
retractguard-web = "citeguard.web:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/citeguard"]

[tool.pytest.ini_options]
addopts = "-m 'not network'"
markers = ["network: tests that hit live APIs (excluded by default)"]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
packages = ["citeguard"]

[[tool.mypy.overrides]]
module = "bibtexparser.*"
ignore_missing_imports = true
